--- a/app/src/main/res/layout/activity_acerca.xml
+++ b/app/src/main/res/layout/activity_acerca.xml
@@ -24,10 +24,10 @@
         android:id="@+id/textView15"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
         android:layout_below="@+id/textView21"
-        android:text="wpp: +593987265881"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:text="PBX: +50325604521"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="#ff667bff"
         android:textSize="25sp"
@@ -50,10 +50,10 @@
         android:id="@+id/textView21"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/textView20"
         android:layout_alignEnd="@+id/textView17"
         android:layout_alignRight="@+id/textView17"
-        android:layout_below="@+id/textView20"
-        android:text="cesarparra10@hotmail.com"
+        android:text="grupo12PDM2022@ues.edu.sv"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="#ffafafaf"
         android:textSize="20sp"
