--- a/app/src/main/res/layout/activity_categorias.xml
+++ b/app/src/main/res/layout/activity_categorias.xml
@@ -21,52 +21,51 @@
         android:layout_centerHorizontal="true" />
 
     <ImageButton
+        android:id="@+id/atras"
         android:layout_width="90dp"
         android:layout_height="90dp"
-        android:id="@+id/atras"
+        android:layout_centerInParent="true"
         android:background="@drawable/circulo"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
         android:src="@android:drawable/ic_menu_revert" />
 
     <ImageButton
-        android:layout_width="80dp"
-        android:layout_height="80dp"
         android:id="@+id/cangrejo"
-        android:background="@drawable/ovalo"
-        android:src="@drawable/cangrejo"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
         android:layout_above="@+id/atras"
+        android:layout_alignStart="@+id/baquita"
         android:layout_alignLeft="@+id/baquita"
-        android:layout_alignStart="@+id/baquita" />
+        android:background="@drawable/ovalo"
+        android:src="@drawable/cangrejo" />
 
     <ImageButton
-        android:layout_width="80dp"
-        android:layout_height="80dp"
         android:id="@+id/jugo"
-        android:background="@drawable/ovalo"
-        android:src="@drawable/bebida"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
         android:layout_below="@+id/atras"
+        android:layout_alignStart="@+id/porciones"
         android:layout_alignLeft="@+id/porciones"
-        android:layout_alignStart="@+id/porciones" />
+        android:background="@drawable/ovalo"
+        android:src="@drawable/bebida" />
 
     <ImageButton
-        android:layout_width="80dp"
-        android:layout_height="80dp"
         android:id="@+id/baquita"
-        android:background="@drawable/ovalo"
-        android:src="@drawable/baquita"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
         android:layout_alignTop="@+id/jugo"
+        android:layout_toStartOf="@+id/textView"
         android:layout_toLeftOf="@+id/textView"
-        android:layout_toStartOf="@+id/textView" />
+        android:background="@drawable/ovalo"
+        android:src="@drawable/baquita" />
 
     <ImageButton
-        android:layout_width="80dp"
-        android:layout_height="80dp"
         android:id="@+id/porciones"
-        android:background="@drawable/ovalo"
-        android:src="@drawable/porcion"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
         android:layout_alignTop="@+id/cangrejo"
+        android:layout_toEndOf="@+id/textView"
         android:layout_toRightOf="@+id/textView"
-        android:layout_toEndOf="@+id/textView" />
+        android:background="@drawable/ovalo"
+        android:src="@drawable/porcion" />
 
 </RelativeLayout>
