--- a/app/src/main/res/layout/principal.xml
+++ b/app/src/main/res/layout/principal.xml
@@ -6,67 +6,67 @@
     android:background="@drawable/fondo">
 
     <TextView
+        android:id="@+id/textView5"
         android:layout_width="80dp"
         android:layout_height="80dp"
+        android:layout_alignEnd="@+id/home"
+        android:layout_alignRight="@+id/home"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:text="Clientes"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Mesas"
-        android:id="@+id/textView5"
         android:textColor="#ffec8605"
         android:textSize="30sp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignRight="@+id/home"
-        android:layout_alignEnd="@+id/home"
         android:textStyle="bold" />
 
     <ImageButton
+        android:id="@+id/home"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:id="@+id/home"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:background="@drawable/circulo"
-        android:src="@android:drawable/ic_menu_sort_by_size" />
+        android:src="@drawable/userrrrr" />
 
     <ImageButton
+        android:id="@+id/Mesa3"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:id="@+id/Mesa3"
-        android:background="@drawable/mesa"
-        android:src="@drawable/cubi"
         android:layout_above="@+id/textView30"
-        android:layout_alignRight="@+id/notas"
         android:layout_alignEnd="@+id/notas"
+        android:layout_alignRight="@+id/notas"
+        android:layout_marginEnd="19dp"
         android:layout_marginRight="19dp"
-        android:layout_marginEnd="19dp" />
+        android:background="@drawable/mesa"
+        android:src="@drawable/avatar" />
 
     <ImageButton
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:id="@+id/Mesa2"
         android:background="@drawable/mesa"
-        android:src="@drawable/cubi"
+        android:src="@drawable/avatar"
         android:layout_below="@+id/textView5"
         android:layout_alignRight="@+id/textView5"
         android:layout_alignEnd="@+id/textView5" />
 
     <ImageButton
+        android:id="@+id/Mesa1"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:id="@+id/Mesa1"
-        android:background="@drawable/mesa"
-        android:src="@drawable/cubi"
         android:layout_below="@+id/textView5"
+        android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:background="@drawable/mesa"
+        android:src="@drawable/avatar" />
 
     <ImageButton
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:id="@+id/Mesa5"
         android:background="@drawable/mesa"
-        android:src="@drawable/cubi"
+        android:src="@drawable/avatar"
         android:layout_above="@+id/textView33"
         android:layout_alignRight="@+id/home"
         android:layout_alignEnd="@+id/home" />
@@ -76,20 +76,20 @@
         android:layout_height="80dp"
         android:id="@+id/Mesa4"
         android:background="@drawable/mesa"
-        android:src="@drawable/cubi"
+        android:src="@drawable/avatar"
         android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
     <ImageButton
+        android:id="@+id/help"
         android:layout_width="70dp"
         android:layout_height="100dp"
-        android:id="@+id/help"
-        android:background="@drawable/consulta"
         android:layout_alignTop="@+id/home"
-        android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:src="@android:drawable/stat_notify_error" />
+        android:layout_alignParentRight="true"
+        android:background="@drawable/consulta"
+        android:src="@drawable/acerca" />
 
     <ImageButton
         android:layout_width="65dp"
@@ -101,58 +101,70 @@
         android:layout_alignParentEnd="true" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Mesa 1"
         android:id="@+id/textView29"
-        android:textColor="#ffb2b2a3"
+        android:layout_width="93dp"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/Mesa1"
+        android:layout_alignEnd="@+id/Mesa1"
         android:layout_alignRight="@+id/Mesa1"
-        android:layout_alignEnd="@+id/Mesa1" />
+        android:layout_marginTop="0dp"
+        android:layout_marginEnd="-13dp"
+        android:layout_marginRight="-13dp"
+        android:text="Cliente 1"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="#ffb2b2a3" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Mesa 2"
         android:id="@+id/textView30"
-        android:textColor="#ffb2b2a3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/Mesa2"
+        android:layout_alignStart="@+id/textView33"
         android:layout_alignLeft="@+id/textView33"
-        android:layout_alignStart="@+id/textView33" />
+        android:layout_marginStart="1dp"
+        android:layout_marginLeft="1dp"
+        android:layout_marginTop="1dp"
+        android:text="Cliente 2"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="#ffb2b2a3" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Mesa 3"
         android:id="@+id/textView31"
-        android:textColor="#ffb2b2a3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/Mesa3"
+        android:layout_alignEnd="@+id/Mesa3"
         android:layout_alignRight="@+id/Mesa3"
-        android:layout_alignEnd="@+id/Mesa3" />
+        android:text="Cliente 3"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="#ffb2b2a3" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Mesa 4"
         android:id="@+id/textView32"
-        android:textColor="#ffb2b2a3"
+        android:layout_width="102dp"
+        android:layout_height="54dp"
         android:layout_below="@+id/Mesa4"
+        android:layout_alignEnd="@+id/Mesa4"
         android:layout_alignRight="@+id/Mesa4"
-        android:layout_alignEnd="@+id/Mesa4" />
+        android:layout_marginTop="2dp"
+        android:layout_marginEnd="-22dp"
+        android:layout_marginRight="-22dp"
+        android:text="Cliente 4"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="#ffb2b2a3" />
 
     <TextView
+        android:id="@+id/textView33"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Mesa 5"
-        android:id="@+id/textView33"
-        android:textColor="#ffb2b2a3"
-        android:layout_alignTop="@+id/textView32"
+        android:layout_alignStart="@+id/home"
         android:layout_alignLeft="@+id/home"
-        android:layout_alignStart="@+id/home" />
+        android:layout_alignTop="@+id/textView32"
+        android:layout_marginStart="-13dp"
+        android:layout_marginLeft="-13dp"
+        android:layout_marginTop="1dp"
+        android:text="Cliente 5"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="#ffb2b2a3" />
 
 </RelativeLayout>
