--- a/app/src/main/res/layout/activity_analgesicos.xml
+++ b/app/src/main/res/layout/activity_analgesicos.xml
@@ -4,7 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.proyecto2pdm115.mariscos"
+    tools:context="com.example.proyecto2pdm115.Analgesicos"
     android:background="@drawable/menus">
 
     <TextView
