--- a/app/src/main/res/layout/principal.xml
+++ b/app/src/main/res/layout/principal.xml
@@ -5,11 +5,19 @@
     android:layout_width="match_parent"
     android:background="@drawable/fondo">
 
+
     <ImageView
         android:id="@+id/imagen1702"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"/>
-
+        android:layout_width="193dp"
+        android:layout_height="178dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="134dp"
+        android:layout_marginTop="463dp"
+        android:layout_marginEnd="99dp"
+        android:layout_marginBottom="105dp" />
 
     <TextView
         android:id="@+id/textView5"
