--- a/app/src/main/res/layout/principal.xml
+++ b/app/src/main/res/layout/principal.xml
@@ -5,11 +5,19 @@
     android:layout_width="match_parent"
     android:background="@drawable/fondo">
 
+
     <ImageView
         android:id="@+id/imagen1702"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"/>
-
+        android:layout_width="367dp"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/home"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="14dp"
+        android:layout_marginTop="453dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="84dp" />
 
     <TextView
         android:id="@+id/textView5"
@@ -48,14 +56,14 @@
         android:src="@drawable/avatar" />
 
     <ImageButton
+        android:id="@+id/Mesa2"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:id="@+id/Mesa2"
-        android:background="@drawable/mesa"
-        android:src="@drawable/avatar"
         android:layout_below="@+id/textView5"
+        android:layout_alignEnd="@+id/textView5"
         android:layout_alignRight="@+id/textView5"
-        android:layout_alignEnd="@+id/textView5" />
+        android:background="@drawable/mesa"
+        android:src="@drawable/avatar" />
 
     <ImageButton
         android:id="@+id/Mesa1"
@@ -78,14 +86,14 @@
         android:layout_alignEnd="@+id/home" />
 
     <ImageButton
+        android:id="@+id/Mesa4"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:id="@+id/Mesa4"
-        android:background="@drawable/mesa"
-        android:src="@drawable/avatar"
-        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_centerVertical="true"
+        android:background="@drawable/mesa"
+        android:src="@drawable/avatar" />
 
     <ImageButton
         android:id="@+id/help"
@@ -98,13 +106,13 @@
         android:src="@drawable/acerca" />
 
     <ImageButton
+        android:id="@+id/notas"
         android:layout_width="65dp"
         android:layout_height="60dp"
-        android:id="@+id/notas"
-        android:background="@drawable/notas"
         android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:background="@drawable/notas" />
 
     <TextView
         android:id="@+id/textView29"
