--- a/app/src/main/res/layout/activity_acerca.xml
+++ b/app/src/main/res/layout/activity_acerca.xml
@@ -10,61 +10,12 @@
     tools:context="com.example.proyecto2pdm115.Acerca"
     android:background="@drawable/fondo">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Soporte"
-        android:id="@+id/textView14"
-        android:textSize="40sp"
-        android:textColor="#ff55be4d"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="32dp" />
-
-    <TextView
-        android:id="@+id/textView15"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView21"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_marginStart="4dp"
-        android:layout_marginLeft="4dp"
-        android:layout_marginTop="17dp"
-        android:text="PBX: +50325604521"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="#ff667bff"
-        android:textSize="25sp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/textView20"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_centerVertical="true"
-        android:text="Realizado:"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="#ff55be4d"
-        android:textSize="20sp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/textView21"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView20"
-        android:layout_alignEnd="@+id/textView17"
-        android:layout_alignRight="@+id/textView17"
-        android:layout_marginTop="20dp"
-        android:text="grupo12PDM2022@ues.edu.sv"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="#ffafafaf"
-        android:textSize="20sp"
-        android:textStyle="bold" />
+    <com.denzcoskun.imageslider.ImageSlider
+        android:id="@+id/image_slider"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        app:auto_cycle="true"
+        app:period="1000"/>
 
     <ImageButton
         android:layout_width="50dp"
