--- a/app/src/main/res/layout/activity_bebidas.xml
+++ b/app/src/main/res/layout/activity_bebidas.xml
@@ -1,38 +1,41 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.proyecto2pdm115.bebidas"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/Bebidas"
-    android:background="@drawable/menus">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/fodoazul"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    tools:context="com.example.proyecto2pdm115.bebidas">
 
     <ListView
+        android:id="@+id/listaBebida"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/listaBebida"
-        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/imageButton4"
         android:layout_alignParentBottom="true"
-        android:layout_below="@+id/imageButton4" />
+        android:layout_centerHorizontal="true" />
 
     <TextView
+        android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Bebidas"
-        android:id="@+id/textView6"
         android:layout_centerHorizontal="true"
+        android:text="Bebidas"
+        android:textAppearance="?android:attr/textAppearanceLarge"
         android:textStyle="bold" />
 
     <ImageButton
+        android:id="@+id/imageButton4"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:id="@+id/imageButton4"
-        android:background="@drawable/circulo"
-        android:src="@android:drawable/ic_menu_revert"
         android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:background="@drawable/circulo"
+        android:backgroundTint="@color/teal_700"
+        android:src="@android:drawable/ic_menu_revert" />
 
 </RelativeLayout>
