--- a/app/src/main/res/layout/activity_carrilto.xml
+++ b/app/src/main/res/layout/activity_carrilto.xml
@@ -1,16 +1,16 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/quemasve"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.proyecto2pdm115.Carrito"
-    android:id="@+id/quemasve"
+    android:background="@drawable/fodoazul"
     android:clickable="false"
-    android:background="@drawable/menus">
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    tools:context="com.example.proyecto2pdm115.Carrito">
 
     <TextView
         android:id="@+id/textView10"
@@ -45,7 +45,7 @@
         android:layout_marginTop="410dp"
         android:layout_marginEnd="29dp"
         android:text="Fecha de solicitud de medicamentos"
-        android:textColor="@android:color/black"
+        android:textColor="@color/white"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -69,34 +69,35 @@
         app:layout_constraintTop_toBottomOf="@+id/tvSelectDate" />
 
     <ImageButton
+        android:id="@+id/imageButton21"
         android:layout_width="45dp"
         android:layout_height="45dp"
-        android:id="@+id/imageButton21"
-        android:background="@drawable/check"
         android:layout_alignTop="@+id/textView10"
+        android:layout_alignEnd="@+id/Pedidos"
         android:layout_alignRight="@+id/Pedidos"
-        android:layout_alignEnd="@+id/Pedidos" />
+        android:background="@drawable/check" />
 
     <ImageButton
+        android:id="@+id/Clear"
         android:layout_width="48dp"
         android:layout_height="45dp"
-        android:id="@+id/Clear"
-        android:background="@drawable/clear"
         android:layout_above="@+id/Pedidos"
+        android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:background="@android:drawable/btn_dialog" />
 
     <ImageButton
+        android:id="@+id/aaaa"
         android:layout_width="45dp"
         android:layout_height="45dp"
-        android:id="@+id/aaaa"
-        android:background="@drawable/circulo"
-        android:src="@android:drawable/ic_menu_upload"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/circulo"
+        android:backgroundTint="@color/teal_700"
 
-        android:onClick="osdo" />
+        android:onClick="osdo"
+        android:src="@android:drawable/ic_menu_upload" />
 
 
 </RelativeLayout>
