--- a/app/src/main/res/layout/activity_notas.xml
+++ b/app/src/main/res/layout/activity_notas.xml
@@ -1,137 +1,151 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/fodoazul"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.proyecto2pdm115.Notas"
-    android:background="@drawable/menus">
+    tools:context="com.example.proyecto2pdm115.Notas">
 
     <ImageButton
-        android:layout_width="70dp"
-        android:layout_height="70dp"
         android:id="@+id/pedido1"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:layout_above="@+id/pedido4"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_marginBottom="67dp"
-        android:background="@drawable/notasa" />
+        android:background="@drawable/notasa"
+        android:backgroundTint="@color/white" />
 
     <ImageButton
-        android:layout_width="70dp"
-        android:layout_height="70dp"
         android:id="@+id/pedido5"
-        android:background="@drawable/notasa"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:layout_below="@+id/pedido1"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/notasa"
+        android:backgroundTint="@color/white" />
 
     <ImageButton
-        android:layout_width="70dp"
-        android:layout_height="70dp"
         android:id="@+id/pedido4"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:background="@drawable/notasa" />
+        android:background="@drawable/notasa"
+        android:backgroundTint="@color/white" />
 
     <ImageButton
-        android:layout_width="70dp"
-        android:layout_height="70dp"
         android:id="@+id/pedido2"
-        android:background="@drawable/notasa"
-        android:layout_alignTop="@+id/pedido1"
-        android:layout_alignLeft="@+id/pedido5"
-        android:layout_alignStart="@+id/pedido5" />
-
-    <ImageButton
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:id="@+id/pedido3"
-        android:background="@drawable/notasa"
-        android:layout_above="@+id/textView23"
-        android:layout_alignLeft="@+id/textView24"
-        android:layout_alignStart="@+id/textView24" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Pedido 1"
-        android:id="@+id/textView22"
-        android:layout_below="@+id/pedido2"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Pedido 2"
-        android:id="@+id/textView23"
-        android:layout_below="@+id/pedido2"
-        android:layout_alignLeft="@+id/pedido2"
-        android:layout_alignStart="@+id/pedido2" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Pedido 3"
-        android:id="@+id/textView24"
-        android:layout_below="@+id/pedido3"
-        android:layout_alignRight="@+id/imageButton6"
-        android:layout_alignEnd="@+id/imageButton6" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Pedido 4"
-        android:id="@+id/textView25"
-        android:layout_below="@+id/pedido5"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Pedido 5"
-        android:id="@+id/textView26"
-        android:layout_below="@+id/pedido5"
+        android:layout_alignStart="@+id/pedido5"
         android:layout_alignLeft="@+id/pedido5"
-        android:layout_alignStart="@+id/pedido5" />
+        android:layout_alignTop="@+id/pedido1"
+        android:background="@drawable/notasa"
+        android:backgroundTint="@color/white" />
+
+    <ImageButton
+        android:id="@+id/pedido3"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_above="@+id/textView23"
+        android:layout_alignStart="@+id/textView24"
+        android:layout_alignLeft="@+id/textView24"
+        android:background="@drawable/notasa"
+        android:backgroundTint="@color/white" />
 
     <TextView
+        android:id="@+id/textView22"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Control de Pedidos"
-        android:id="@+id/textView27"
-        android:textStyle="bold"
-        android:textSize="25sp"
-        android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/pedido1"
-        android:layout_toEndOf="@+id/pedido1" />
-
-    <ImageButton
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:id="@+id/imageButton6"
-        android:background="@drawable/circulo"
-        android:src="@android:drawable/ic_menu_revert"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
-
-    <ImageButton
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:id="@+id/imageButton8"
-        android:layout_alignTop="@+id/imageButton6"
-        android:onClick="bloq"
-        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/pedido2"
         android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:text="Pedido 1"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@color/white" />
+
+    <TextView
+        android:id="@+id/textView23"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/pedido2"
+        android:layout_alignStart="@+id/pedido2"
+        android:layout_alignLeft="@+id/pedido2"
+        android:text="Pedido 2"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@color/white" />
+
+    <TextView
+        android:id="@+id/textView24"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/pedido3"
+        android:layout_alignEnd="@+id/imageButton6"
+        android:layout_alignRight="@+id/imageButton6"
+        android:text="Pedido 3"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@color/white" />
+
+    <TextView
+        android:id="@+id/textView25"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/pedido5"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:text="Pedido 4"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@color/white" />
+
+    <TextView
+        android:id="@+id/textView26"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/pedido5"
+        android:layout_alignStart="@+id/pedido5"
+        android:layout_alignLeft="@+id/pedido5"
+        android:text="Pedido 5"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@color/white" />
+
+    <TextView
+        android:id="@+id/textView27"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_toEndOf="@+id/pedido1"
+        android:layout_toRightOf="@+id/pedido1"
+        android:text="Control de Pedidos"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textSize="25sp"
+        android:textStyle="bold" />
+
+    <ImageButton
+        android:id="@+id/imageButton6"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
         android:background="@drawable/circulo"
+        android:backgroundTint="@color/teal_700"
+        android:src="@android:drawable/ic_menu_revert" />
+
+    <ImageButton
+        android:id="@+id/imageButton8"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignTop="@+id/imageButton6"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:background="@drawable/circulo"
+        android:backgroundTint="@color/teal_700"
+        android:onClick="bloq"
         android:src="@android:drawable/ic_lock_idle_lock" />
 </RelativeLayout>
