--- a/app/src/main/res/layout/activity_parrillada.xml
+++ b/app/src/main/res/layout/activity_parrillada.xml
@@ -1,37 +1,40 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/fodoazul"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.proyecto2pdm115.parrillada"
-    android:background="@drawable/menus">
+    tools:context="com.example.proyecto2pdm115.parrillada">
 
     <TextView
+        android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Parrilladas"
-        android:id="@+id/textView7"
         android:layout_centerHorizontal="true"
+        android:text="Parrilladas"
+        android:textAppearance="?android:attr/textAppearanceLarge"
         android:textStyle="bold" />
 
     <ListView
+        android:id="@+id/parrilla"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/parrilla"
-        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/imageButton"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/imageButton" />
+        android:layout_alignParentLeft="true" />
 
     <ImageButton
+        android:id="@+id/imageButton"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:id="@+id/imageButton"
-        android:background="@drawable/circulo"
-        android:src="@android:drawable/ic_menu_revert"
         android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:background="@drawable/circulo"
+        android:backgroundTint="@color/teal_700"
+        android:src="@android:drawable/ic_menu_revert" />
 
 </RelativeLayout>
