--- a/app/src/main/res/layout/activity_pedido.xml
+++ b/app/src/main/res/layout/activity_pedido.xml
@@ -1,48 +1,51 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/fodoazul"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.proyecto2pdm115.Pedido"
-    android:background="@drawable/menus">
+    tools:context="com.example.proyecto2pdm115.Pedido">
 
     <ListView
+        android:id="@+id/pedido"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/pedido"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
         android:layout_below="@+id/clear"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true" />
 
     <TextView
+        android:id="@+id/textView28"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Carrito de Compras"
-        android:id="@+id/textView28"
-        android:textSize="24sp"
-        android:textStyle="bold"
         android:layout_alignTop="@+id/clear"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:text="Carrito de Compras"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textSize="24sp"
+        android:textStyle="bold" />
 
     <ImageButton
+        android:id="@+id/clear"
         android:layout_width="50dp"
         android:layout_height="48dp"
-        android:id="@+id/clear"
-        android:background="@drawable/clear"
-        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentTop="true"
+        android:background="@android:drawable/btn_dialog" />
 
     <ImageButton
+        android:id="@+id/imageButton7"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:id="@+id/imageButton7"
-        android:background="@drawable/circulo"
-        android:src="@android:drawable/ic_menu_revert"
-        android:layout_alignRight="@+id/pedido"
+        android:layout_alignTop="@+id/textView28"
         android:layout_alignEnd="@+id/pedido"
-        android:layout_alignTop="@+id/textView28" />
+        android:layout_alignRight="@+id/pedido"
+        android:background="@drawable/circulo"
+        android:backgroundTint="@color/teal_700"
+        android:src="@android:drawable/ic_menu_revert" />
 </RelativeLayout>
