--- a/app/src/main/res/layout/activity_registro_sms.xml
+++ b/app/src/main/res/layout/activity_registro_sms.xml
@@ -1,11 +1,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/fodoazul"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.proyecto2pdm115.RegistroSms"
-    android:background="@drawable/fondo2">
+    tools:context="com.example.proyecto2pdm115.RegistroSms">
 
     <TextView
         android:id="@+id/textView9"
@@ -17,7 +19,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:text="Nombre de usuario"
-        android:textColor="#ff4e83ff"
+        android:textColor="@color/white"
         android:textSize="30sp" />
 
     <TextView
@@ -30,19 +32,19 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:text="Contraseña"
-        android:textColor="#ff4e83ff"
+        android:textColor="@color/white"
         android:textSize="30sp" />
 
     <EditText
+        android:id="@+id/Usreg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/Usreg"
         android:layout_below="@+id/textView9"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:textColor="#ffaaaaaa"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:textColor="@color/white"
         android:textSize="25sp" />
 
 
@@ -54,60 +56,61 @@
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
         android:text="Ingrese el Código"
-        android:textColor="#ff47ca6a"
+        android:textColor="@color/white"
         android:textSize="25sp" />
 
 
     <EditText
+        android:id="@+id/Pwreg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="numberPassword"
-        android:ems="10"
-        android:id="@+id/Pwreg"
         android:layout_below="@+id/textView11"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:textColor="#ffaaaaaa"
-        android:layout_toLeftOf="@+id/check"
+        android:layout_alignParentLeft="true"
         android:layout_toStartOf="@+id/check"
+        android:layout_toLeftOf="@+id/check"
+        android:ems="10"
+        android:inputType="numberPassword"
+        android:textColor="@color/white"
         android:textSize="25sp" />
 
     <ImageButton
+        android:id="@+id/check"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:id="@+id/check"
-        android:onClick="enviar"
-        android:background="@drawable/consulta"
         android:layout_alignBottom="@+id/Pwreg"
-        android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginRight="41dp"
+        android:layout_alignParentRight="true"
         android:layout_marginEnd="41dp"
+        android:layout_marginRight="41dp"
+        android:background="@drawable/consulta"
+        android:onClick="enviar"
         android:src="@android:drawable/ic_dialog_email" />
 
     <ImageButton
+        android:id="@+id/save"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:id="@+id/save"
-        android:onClick="Registrar"
-        android:layout_alignBottom="@+id/codigo"
-        android:layout_alignLeft="@+id/check"
         android:layout_alignStart="@+id/check"
+        android:layout_alignLeft="@+id/check"
+        android:layout_alignBottom="@+id/codigo"
         android:background="@drawable/circulo"
+        android:backgroundTint="@color/teal_700"
+        android:onClick="Registrar"
         android:src="@android:drawable/ic_menu_save" />
 
     <EditText
+        android:id="@+id/codigo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="numberPassword"
-        android:ems="10"
-        android:id="@+id/codigo"
         android:layout_below="@+id/txtC"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:textColor="#ffaaaaaa"
-        android:layout_toLeftOf="@+id/save"
+        android:layout_alignParentLeft="true"
         android:layout_toStartOf="@+id/save"
+        android:layout_toLeftOf="@+id/save"
+        android:ems="10"
+        android:inputType="numberPassword"
+        android:textColor="@color/white"
         android:textSize="25sp" />
 
 </RelativeLayout>
