--- a/app/src/main/res/layout/principal.xml
+++ b/app/src/main/res/layout/principal.xml
@@ -1,9 +1,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".MainActivity"
     style="@style/b"
     android:layout_width="match_parent"
-    android:background="@drawable/fondo">
+    android:background="@drawable/fodoazul"
+    tools:context=".MainActivity">
 
     <ImageView
         android:id="@+id/imagen1702"
@@ -20,16 +20,21 @@
 
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="204dp"
+        android:layout_height="52dp"
         android:layout_alignEnd="@+id/home"
         android:layout_alignRight="@+id/home"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
+        android:layout_marginStart="142dp"
+        android:layout_marginLeft="142dp"
+        android:layout_marginTop="23dp"
+        android:layout_marginEnd="-54dp"
+        android:layout_marginRight="-54dp"
         android:text="Clientes"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="#ffec8605"
+        android:textColor="@android:color/holo_orange_dark"
         android:textSize="30sp"
         android:textStyle="bold" />
 
@@ -40,6 +45,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:background="@drawable/circulo"
+        android:backgroundTint="@android:color/holo_green_dark"
         android:src="@drawable/userrrrr" />
 
     <ImageButton
@@ -49,20 +55,26 @@
         android:layout_above="@+id/textView30"
         android:layout_alignEnd="@+id/notas"
         android:layout_alignRight="@+id/notas"
-        android:layout_marginEnd="19dp"
-        android:layout_marginRight="19dp"
+        android:layout_marginEnd="29dp"
+        android:layout_marginRight="29dp"
+        android:layout_marginBottom="5dp"
         android:background="@drawable/mesa"
         android:src="@drawable/avatar" />
 
     <ImageButton
+        android:id="@+id/Mesa2"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:id="@+id/Mesa2"
-        android:background="@drawable/mesa"
-        android:src="@drawable/avatar"
         android:layout_below="@+id/textView5"
+        android:layout_alignEnd="@+id/textView5"
         android:layout_alignRight="@+id/textView5"
-        android:layout_alignEnd="@+id/textView5" />
+        android:layout_marginStart="43dp"
+        android:layout_marginTop="31dp"
+        android:layout_marginEnd="43dp"
+        android:layout_marginRight="43dp"
+        android:layout_toEndOf="@+id/Mesa1"
+        android:background="@drawable/mesa"
+        android:src="@drawable/avatar" />
 
     <ImageButton
         android:id="@+id/Mesa1"
@@ -71,28 +83,37 @@
         android:layout_below="@+id/textView5"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
+        android:layout_marginStart="29dp"
+        android:layout_marginLeft="29dp"
+        android:layout_marginTop="33dp"
         android:background="@drawable/mesa"
         android:src="@drawable/avatar" />
 
     <ImageButton
+        android:id="@+id/Mesa5"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:id="@+id/Mesa5"
-        android:background="@drawable/mesa"
-        android:src="@drawable/avatar"
         android:layout_above="@+id/textView33"
+        android:layout_alignEnd="@+id/home"
         android:layout_alignRight="@+id/home"
-        android:layout_alignEnd="@+id/home" />
+        android:layout_marginEnd="-13dp"
+        android:layout_marginRight="-13dp"
+        android:layout_marginBottom="9dp"
+        android:background="@drawable/mesa"
+        android:src="@drawable/avatar" />
 
     <ImageButton
+        android:id="@+id/Mesa4"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:id="@+id/Mesa4"
-        android:background="@drawable/mesa"
-        android:src="@drawable/avatar"
-        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="28dp"
+        android:layout_marginLeft="28dp"
+        android:layout_marginTop="310dp"
+        android:background="@drawable/mesa"
+        android:src="@drawable/avatar" />
 
     <ImageButton
         android:id="@+id/help"
@@ -102,16 +123,18 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:background="@drawable/consulta"
+        android:backgroundTint="@android:color/holo_orange_dark"
         android:src="@drawable/acerca" />
 
     <ImageButton
+        android:id="@+id/notas"
         android:layout_width="65dp"
         android:layout_height="60dp"
-        android:id="@+id/notas"
-        android:background="@drawable/notas"
         android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:background="@drawable/notas"
+        android:backgroundTint="@color/teal_700" />
 
     <TextView
         android:id="@+id/textView29"
@@ -120,12 +143,12 @@
         android:layout_below="@+id/Mesa1"
         android:layout_alignEnd="@+id/Mesa1"
         android:layout_alignRight="@+id/Mesa1"
-        android:layout_marginTop="0dp"
-        android:layout_marginEnd="-13dp"
-        android:layout_marginRight="-13dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="-3dp"
+        android:layout_marginRight="-3dp"
         android:text="Cliente 1"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="#ffb2b2a3" />
+        android:textColor="@color/white" />
 
     <TextView
         android:id="@+id/textView30"
@@ -134,12 +157,12 @@
         android:layout_below="@+id/Mesa2"
         android:layout_alignStart="@+id/textView33"
         android:layout_alignLeft="@+id/textView33"
-        android:layout_marginStart="1dp"
-        android:layout_marginLeft="1dp"
-        android:layout_marginTop="1dp"
+        android:layout_marginStart="-9dp"
+        android:layout_marginLeft="-9dp"
+        android:layout_marginTop="10dp"
         android:text="Cliente 2"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="#ffb2b2a3" />
+        android:textColor="@color/white" />
 
     <TextView
         android:id="@+id/textView31"
@@ -148,23 +171,26 @@
         android:layout_below="@+id/Mesa3"
         android:layout_alignEnd="@+id/Mesa3"
         android:layout_alignRight="@+id/Mesa3"
+        android:layout_marginTop="9dp"
+        android:layout_marginEnd="-3dp"
+        android:layout_marginRight="-3dp"
         android:text="Cliente 3"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="#ffb2b2a3" />
+        android:textColor="@color/white" />
 
     <TextView
         android:id="@+id/textView32"
-        android:layout_width="102dp"
-        android:layout_height="54dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/Mesa4"
         android:layout_alignEnd="@+id/Mesa4"
         android:layout_alignRight="@+id/Mesa4"
-        android:layout_marginTop="2dp"
-        android:layout_marginEnd="-22dp"
-        android:layout_marginRight="-22dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="-5dp"
+        android:layout_marginRight="-5dp"
         android:text="Cliente 4"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="#ffb2b2a3" />
+        android:textColor="@color/white" />
 
     <TextView
         android:id="@+id/textView33"
@@ -173,11 +199,11 @@
         android:layout_alignStart="@+id/home"
         android:layout_alignLeft="@+id/home"
         android:layout_alignTop="@+id/textView32"
-        android:layout_marginStart="-13dp"
-        android:layout_marginLeft="-13dp"
-        android:layout_marginTop="1dp"
+        android:layout_marginStart="3dp"
+        android:layout_marginLeft="3dp"
+        android:layout_marginTop="-2dp"
         android:text="Cliente 5"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="#ffb2b2a3" />
+        android:textColor="@color/white" />
 
 </RelativeLayout>
