--- a/app/src/main/res/layout/principal.xml
+++ b/app/src/main/res/layout/principal.xml
@@ -19,6 +19,25 @@
         android:layout_marginBottom="84dp" />
 
     <TextView
+        android:id="@+id/name"
+        android:textSize="15sp"
+        android:text="Nombre"
+        android:layout_height="25dp"
+        android:layout_width="150dp"
+        android:textColor="@android:color/holo_green_dark"
+        android:textStyle="bold" />
+    <TextView
+        android:id="@+id/email"
+        android:textSize="10sp"
+        android:text="correo@gmail.com"
+        android:layout_height="25dp"
+        android:layout_width="150dp"
+        android:layout_below="@+id/name"
+        android:textColor="@android:color/holo_green_dark"
+        />
+
+
+    <TextView
         android:id="@+id/textView5"
         android:layout_width="204dp"
         android:layout_height="52dp"
